# game-downloader-bot

./: README.md  main.py  pyproject.toml
scrapers/: ankergames.py  gamebounty.py  steamuground.py
